Beginning testing the homepage

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="row">Welcome</h1>
+<h1 class="row"><p>Welcome</p></h1>
 	<div class="row">
 		<div class="span2">
 			<div class="offset1">
@@ -11,4 +11,3 @@
 			<div class="bottom-row">
 			</div>
 		</div>
-
