--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -4,26 +4,31 @@ header {
 
 }
 
+.navbar {
+
+}
+
+h1 {
+	text-align: center;
+
+}
 
 .navbar ul li {
 	list-style: none;
-	display: inline-block;
 
-	input.search-box {
-
+	form .navbar-search {
 		margin:10px 10px 10px 10px;
-		padding: 8px 20px 8px 8px;
+		padding: 8px 20px 8px 8px
+
 
 	}
 }
 	
 
-button.btn  {
-	margin-bottom: 5px;
-
-
+button.btn.btn-success {
+	
+	margin: 0px 0px 12px 5px;
 }
-
 
 
 h1 {
