--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,25 +6,22 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<header class="navbar">
-	<ul class="navbar-inner">
-		<li>
-			<button type="submit" class="btn-large btn-inverse" href="pages/index">Home</button>
-		</li>
-		<li>
-			<button type="submit" class="btn-large btn-inverse" href="recipes/new">Add Recipe</button>
-		</li>
-		<li>
-			<button type="submit" class="btn-large btn-inverse" href="#">Browse</button>
-		</li>
-		<li>
-			<button type="submit" class="btn-large btn-inverse" href="#">Categories</button>
-		</li>
-		<li class="search-bar pull-right">
-			<input type="text" class="search-box" placeholder="Search"></input>
-			<button class="btn btn-success" type="submit" href="#">Search</button>
-		</li>
-	</ul>
+	<div class="navbar">
+		<div class="navbar-inner">
+			<a class="brand" href="pages/index">Home</a>
+				<ul class="nav">
+					<li class="active">
+						<a href="recipes/new">Add Recipe</a></li>
+					<li class="active">
+						<a href="#">Browse</a></li>
+					<li class="active">
+						<a href="#">Categories</a></li>
+				</ul>
+					<form class="navbar-search pull-right">
+						<input type="text" class="span2">
+						<button type="submit" class="btn btn-success" href="#">Search</button></form>
+		</div>
+	</div>
 <body>
 
 <%= yield %>
