pages and recipes routes set up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
 </head>
 	<div class="navbar">
 		<div class="navbar-inner">
-			<a class="brand" href="pages/index">Home</a>
+			<a class="brand" href="<%= root_path %>">Home</a>
 				<ul class="nav">
 					<li class="active">
-						<a href="recipes/new">Add Recipe</a></li>
+						<a href="<%= recipes_new_path %>">Add Recipe</a></li>
 					<li class="active">
 						<a href="#">Browse</a></li>
 					<li class="active">
