first tests user controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,14 @@
 		</div>
 	</div>
 <body>
+<div id="user_nav">
+  <%= render 'sign_in_form' %>
+</div>
+	</div>
+			
+
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <%= yield %>
 
