Acceptance and integration reorganized

--- a/app/views/application/_sign_in_form.html.erb
+++ b/app/views/application/_sign_in_form.html.erb
@@ -1,6 +1,5 @@
  
-  <% if user_signed_in? %>
-      Signed in as <%= current_user.email %>. Not you?
+  <% if user_signed_in? %>Welcome! <%= current_user.email %>. Not you?
       <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
       <% end %>
     <% unless user_signed_in? %>
