--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-	<div class="navbar">
+	<div class="navbar navbar-inverse">
 		<div class="navbar-inner">
 			<a class="brand" href="<%= root_path %>">Home</a>
 				<ul class="nav">
