schema/model changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 			<a class="brand" href="<%= root_path %>">Home</a>
 				<ul class="nav">
 					<li class="active">
-						<a href="<%= recipes_new_path %>">Add Recipe</a></li>
+						<a href="<%= new_recipe_path %>">Add Recipe</a></li>
 					<li class="active">
 						<a href="#">Browse</a></li>
 					<li class="active">
