--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,22 +17,23 @@
 					<li class="active">
 						<a href="#">Categories</a></li>
 				</ul>
-					<form class="navbar-search pull-right">
-						<input type="text" class="span2">
-						<button type="submit" class="btn btn-success" href="#">Search</button></form>
+				<form class="navbar-search pull-right">
+					<input type="text" class="span2">
+					<button type="submit" class="btn btn-success" href="#">Search</button>
+				</form>
 		</div>
 	</div>
 <body>
 <div class="user-nav">
   <%= render 'sign_in_form' %>
 </div>
-	</div>
-			
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-
+<div class="notice-and-alerts">
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
+</div>
 <%= yield %>
+
 
 </body>
 </html>
