--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,14 +1,13 @@
 <h1>Add Delishishness</h1>
-<div class="container-recipe">
-<%= simple_form_for @recipe do |f| %>
-	<%= f.input :title %>
-	<%= f.input :description %>
-	<%= f.simple_fields_for :ingredients do |i| %>
-		<%= i.input :name %>
-	<% end %>
-		<%= f.button :submit %>
-	<% end %>
-</div>
+	<div class="recipe-fields">
+		<%= form_for @recipe do |f| %>
+			<%= f.label "Title" %>
+			<%= f.text_field :title %>
+			<%= f.label "Description" %>
+			<%= f.text_field :description %>
+			<%= f.submit %>
+		<% end %>
+	</div>
 
 
 
