--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,6 +1,6 @@
 header {
 	height: 100px;
-	width:1956px;
+	width:100%;
 
 }
 
@@ -12,7 +12,7 @@ padding: 20px;
 
 h1.row {
 	text-align: center;
-	width: 1956px;
+	width: 100%;
 
 }
 
@@ -37,7 +37,7 @@ button.btn.btn-success {
 h1 {
 	background-color: pink;
 	height:100px;
-	width: 1454px;
+	width: 100%;
 	padding: 30px;
 
 }
@@ -45,14 +45,14 @@ h1 {
 div.row {
 	background-color: antiquewhite;
 	height:450px;
-	width: 1956px;
+	width: 100%;
 	padding: 30px;
 
 
 	div.bottom-row {
 		background-color: lightblue;
 		height:200px;
-		width:1956px;
+		width:100%;
 
 	}
 
