--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -4,7 +4,7 @@
 			<%= f.label "Title" %>
 			<%= f.text_field :title %>
 			<%= f.label "Description" %>
-			<%= f.text_field :description %>
+			<%= f.text_area :description %><br>
 			<%= f.submit %>
 		<% end %>
 	</div>
