--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,2 +1,2 @@
-<%= @recipe.title  %> successfully created!
-<p>Find me in app/views/recipes/show.html.erb</p>
+<%= @recipe.title %><br>
+<%= @recipe.description %>
