--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -16,25 +16,48 @@ h1.row {
 
 }
 
+h1.headling {
+	font-family:"Courier New", Courier, monospace;
+	text-align:center;
+
+	p {
+		font-size: 14pt;
+	}
+}
+
+div.h4-border-div {
+	height:5px;
+	background-color:black;	
+}
+
+h4.newest-recipies {
+	padding:5px;
+	font-size: 20pt;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	text-align: center;
+
+
+}
+
+div.row-fluid {
+	margin-top:30px;
+	width: 100%;
+	margin-left: 235px;
+
+}
+
+
 .navbar ul li {
 	list-style: none;
 
 	form .navbar-search {
 		margin:10px 10px 10px 10px;
 		padding: 8px 20px 8px 8px
-
-
 	}
 }
 	
-
-button.btn.btn-success {
-	
-	margin: 0px 0px 12px 5px;
-}
-
-
 h1 {
+	border: black solid 2px;
 	background-color: pink;
 	height:100px;
 	width: 100%;
@@ -42,7 +65,9 @@ h1 {
 
 }
 
-div.row {
+div.inner-banner-row {
+	border-width: 3px;
+	border-style: solid dashed solid dashed;
 	background-color: antiquewhite;
 	height:450px;
 	width: 100%;
