--- a/app/views/application/_navbar_form.html.erb
+++ b/app/views/application/_navbar_form.html.erb
@@ -1,17 +1,18 @@
 <div class="navbar navbar-inverse">
-		<div class="navbar-inner">
-			<a class="brand" href="<%= root_path %>">Home</a>
+	<div class="navbar-inner">
+		<a class="brand" href="<%= root_path %>" class="home">Home</a>
 			<ul class="nav">
 				<li class="active">
-					<a href="recipes/new">Add Recipe</a></li>
+					<a href="<%= new_recipe_path %>">Add Recipe</a></li>
 				<li class="active">
-					<a href="#">Browse</a></li>
+					<a href="#" id="browse">Browse</a></li>
 				<li class="active">
-					<a href="#">Categories</a></li>
+					<a href="#" id="categories">Categories</a>
+				</li>
 			</ul>
-			<form class="navbar-search pull-right">
-				<input type="text" class="span2">
-				<button type="submit" class="btn btn-success" href="#">Search</button>
-			</form>
-		</div>
+			<%= search_form_for search, :class => "nav navbar-search pull-right"  do |f| %>
+				<%= f.text_field :title_cont, { :id => 'search-field'} %> 
+				<%= f.submit "Search", { :class => "btn btn-success", :id => 'search-button' } %>
+			<% end %>
 	</div>
+</div>
