--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,21 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 	<div class="navbar navbar-inverse">
-		<div class="navbar-inner">
-			<a class="brand" href="<%= root_path %>">Home</a>
-				<ul class="nav">
-					<li class="active">
-						<a href="<%= new_recipe_path %>">Add Recipe</a></li>
-					<li class="active">
-						<a href="#">Browse</a></li>
-					<li class="active">
-						<a href="#">Categories</a></li>
-				</ul>
-				<form class="navbar-search pull-right">
-					<input type="text" class="span2">
-					<button type="submit" class="btn btn-success" href="#">Search</button>
-				</form>
-		</div>
+<%= render 'navbar_form' %>
 	</div>
 <body>
 <div class="user-nav">
