search and tests added

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -58,7 +58,7 @@ div.row-fluid {
 	
 h1 {
 	border: black solid 2px;
-	background-color: pink;
+	background-color: #F4D6BC;
 	height:100px;
 	width: 100%;
 	padding: 30px;
@@ -68,7 +68,7 @@ h1 {
 div.inner-banner-row {
 	border-width: 3px;
 	border-style: solid dashed solid dashed;
-	background-color: antiquewhite;
+	background-color: #447294;
 	height:450px;
 	width: 100%;
 	padding: 30px;
