--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,6 +3,7 @@
 		<h1 class="headling">Welcome
 			<p>Top Notch Recipes Secretly Taken From Grandmas Recipe Book</p>
 		</h1>
+		<img href="assets/images/chicken-parmigiana-13.jpg"></img>
 	</div>
 </div>
 
