Comments table with relationship added

--- a/app/views/application/_navbar_form.html.erb
+++ b/app/views/application/_navbar_form.html.erb
@@ -10,7 +10,7 @@
 					<a href="#" id="categories">Categories</a>
 				</li>
 			</ul>
-			<%= search_form_for search, :class => "nav navbar-search pull-right"  do |f| %>
+			<%= search_form_for search, :class => "nav navbar-search pull-right input-append search-querie"  do |f| %>
 				<%= f.text_field :title_cont, { :id => 'search-field'} %> 
 				<%= f.submit "Search", { :class => "btn btn-success", :id => 'search-button' } %>
 			<% end %>
