--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -4,7 +4,7 @@
 			<%= f.input :title %>
 			<%= f.input :description %><br>
 			<%= f.association :ingredients %>
-			<%= f.submit %>
+			<%= f.submit :class => "btn btn-warning" %>
 		<% end %>
 	</div>
 
