--- a/app/views/application/_sign_in_form.html.erb
+++ b/app/views/application/_sign_in_form.html.erb
@@ -9,7 +9,7 @@
   		<%= f.password_field :password %>
       <%= f.label :remember_me, 'Remember me' %>
       <%= f.check_box :remember_me %>
-      <%= f.submit 'Log In' %>
+      <%= f.submit 'Log In', :class => "btn btn-warning" %>
     <% end %>
     <%=  %>
     <%= link_to "Sign up", new_user_registration_path %>
