--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add Delishishness</h1>
+<h1 class="delish">Add Deliciousness</h1>
 	<div class="recipe-fields">
 		<%= simple_form_for @recipe do |f| %>
 			<%= f.input :title %>
