--- a/app/views/application/_sign_in_form.html.erb
+++ b/app/views/application/_sign_in_form.html.erb
@@ -1,6 +1,9 @@
-<% if user_signed_in? %>Welcome! <%= current_user.email %>. Not you?
-    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-    <% end %>
+<% if user_signed_in? %>
+<div class="welcome-sign-in">
+  <%= current_user.email %><br>
+  </div>
+  <%= button_to "Sign out", destroy_user_session_path, :method => :delete, :class => "btn btn-danger" %>
+<% end %>
   <% unless user_signed_in? %>
   	<%= form_for "user", :url => user_session_path do |f| %>
   		<%= f.label :email, 'Email' %>
