--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+p.show-user-email {
+	color: black;
+	font-size:14pt;
+	font-family:"Courier New", Courier, monospace;
+
+}
