Comment model started with tests

--- a/app/assets/stylesheets/recipe.new.css.scss
+++ b/app/assets/stylesheets/recipe.new.css.scss
@@ -7,5 +7,17 @@ div.recipe-fields {
 	border: solid black 2px;
 	margin-left:40%;
 
-
 }
+
+div.add-comment {
+	border: solid black;
+	height:250px;
+	width:250px;
+
+
+	.comment-box {
+
+
+
+		}
+	}
