--- a/app/views/application/_sign_in_form.html.erb
+++ b/app/views/application/_sign_in_form.html.erb
@@ -6,14 +6,11 @@
 <% end %>
   <% unless user_signed_in? %>
   	<%= form_for "user", :url => user_session_path do |f| %>
-  		<%= f.label :email, 'Email' %>
-  		<%= f.text_field :email %>
-  		<%= f.label :password, 'Password' %>
-  		<%= f.password_field :password %>
+  		<%= f.text_field :email, :placeholder => "Email" %><br>
+  		<%= f.password_field :password, :placeholder => 'Password' %>
       <%= f.label :remember_me, 'Remember me' %>
       <%= f.check_box :remember_me %>
       <%= f.submit 'Log In', :class => "btn btn-warning" %>
     <% end %>
-    <%=  %>
     <%= link_to "Sign up", new_user_registration_path %>
 <% end %>
