fixed layout issues

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,6 +6,10 @@
 	<%= ingredient.name %>
 <% end %>
 
+<%= @recipe.comments.each do |comment| %>
+	<%= comment.title %>
+<% end %>
+
 <div class="comment-container">
 	<div class="add-comment">
 		<p>Add Comment</p>
