--- a/app/views/application/_navbar_form.html.erb
+++ b/app/views/application/_navbar_form.html.erb
@@ -1,18 +1,19 @@
-<div class="navbar navbar-inverse">
-	<div class="navbar-inner">
+
+<div class="navbar-inner">
+	<div class="container">
 		<a class="brand" href="<%= root_path %>" class="home">Home</a>
-			<ul class="nav">
-				<li class="active">
-					<a href="<%= new_recipe_path %>">Add Recipe</a></li>
+		<ul class="nav">
+			<li class="active">
+				<a href="<%= new_recipe_path %>">Add Recipe</a></li>
 				<li class="active">
 					<a href="#" id="browse">Browse</a></li>
-				<li class="active">
-					<a href="#" id="categories">Categories</a>
-				</li>
-			</ul>
-			<%= search_form_for search, :class => "nav navbar-search pull-right input-append search-querie"  do |f| %>
+					<li class="active">
+						<a href="#" id="categories">Categories</a>
+					</li>
+				</ul>
+				<%= search_form_for search, :class => "nav navbar-search pull-right input-append search-querie"  do |f| %>
 				<%= f.text_field :title_cont, { :id => 'search-field'} %> 
 				<%= f.submit "Search", { :class => "btn btn-success", :id => 'search-button' } %>
-			<% end %>
-	</div>
-</div>
+				<% end %>
+			</div>
+		</div>
