--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,12 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-	<div class="navbar navbar-inverse">
-<%= render 'navbar_form' %>
-	</div>
 <body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+<%= render 'navbar_form' %>
+
+	</div>
+		<div class="container">
 <div class="user-nav">
 	
   <%= render 'sign_in_form' %>
@@ -22,6 +24,6 @@
 
 <%= yield %>
 
-
+	</div>
 </body>
 </html>
