--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row inner-banner-row">
-		<h1 class="headling">Welcome
+		<h1 class="heading">Welcome
 			<p>Top Notch Recipes Secretly Taken From Grandmas Recipe Book</p>
 		</h1>
 		<div class="chicken-image"><%= image_tag("chicken-parmigiana-13.jpg") %></div>
