--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,25 +1,32 @@
-<%= @recipe.title %><br>
-<%= @recipe.description %>
 
+<div id="recipe-container">
+	<div id="recipe-titile-container">
+		<%= @recipe.title %><br>
+	</div>
 
-<% @recipe.ingredients.each do |ingredient| %>
-	<%= ingredient.name %>
-<% end %>
+	<div id="recipe-description-container">
+		<p>Description:</p>
+		<%= @recipe.description %>
+	</div>
+
+	<div id="recipe-ingredients-container">
+		<p>Ingredients :</p>
+		<% @recipe.ingredients.each do |ingredient| %>
+			<%= ingredient.name %><br>
+		<% end %>
+	</div>
+</div>
 
 <%= @recipe.comments.each do |comment| %>
-	<%= comment.title %>
+	<%= comment.body %>
 <% end %>
 
 <div class="comment-container">
-	<div class="add-comment">
-		<p>Add Comment</p>
-		<div class="comment-box">
-		<%= simple_form_for @comment do |c|  %>
-			<%= c.text_area :body, :wrapper => :small  %>
-			<%= c.submit :class => "btn btn-success"%>
-		<% end %>
-		</div>
-	</div>
+	<p>Add Comment</p>
+	<%= simple_form_for @comment do |c|  %>
+		<%= c.input :body, :label => false, :as => :text, :input_html => { :rows => 6 }  %>
+		<%= c.submit :class => "btn btn-success"%>
+	<% end %>
 </div>
 
 
