--- a/app/views/application/_sign_in_form.html.erb
+++ b/app/views/application/_sign_in_form.html.erb
@@ -1,16 +1,20 @@
 <% if user_signed_in? %>
-<div class="welcome-sign-in">
- <p class="show-user-email">Hello!<br> <%= current_user.email %><br></p>
-  </div>
-  <%= button_to "Sign out", destroy_user_session_path, :method => :delete, :class => "btn btn-danger" %>
+<p class="show-user-email">Hello!<br> 
+<%= current_user.email %><br>
+</p>
+ <%= button_to "Sign out", destroy_user_session_path, :method => :delete, :class => "btn btn-danger" %>
 <% end %>
-  <% unless user_signed_in? %>
-  	<%= form_for "user", :url => user_session_path do |f| %>
-  		<%= f.text_field :email, :placeholder => "Email" %><br>
-  		<%= f.password_field :password, :placeholder => 'Password' %>
-      <%= f.label :remember_me, 'Remember me' %>
-      <%= f.check_box :remember_me %>
-      <%= f.submit 'Log In', :class => "btn btn-warning" %>
-    <% end %>
-    <%= link_to "Sign up", new_user_registration_path %>
+
+<% unless user_signed_in? %>
+  <%= simple_form_for "user", :url => user_session_path do |f| %>
+    <%= f.input :email, placeholder: 'Email' %>
+    <%= f.input :password, placeholder: 'Password' %>
+    <%= f.check_box :remember_me %>
+    <%= f.submit 'Log In', id: 'Log In', :class => "btn btn-warning", :method => :post %>
+  <% end %>
 <% end %>
+<%= link_to "Sign up", new_user_registration_path %>
+
+
+
+
