--- a/app/views/application/_navbar_form.html.erb
+++ b/app/views/application/_navbar_form.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar-inner">
-	<a class="brand" href="<%=u root_path %>" class="home">Home</a>
+	<a class="brand" href="<%= root_path %>" class="home">Home</a>
 	<ul class="nav">
 	<li class="active">
 		<%= link_to 'Add Recipe', new_recipe_path %></li>
