user can view recipes they created

--- a/app/views/application/_navbar_form.html.erb
+++ b/app/views/application/_navbar_form.html.erb
@@ -1,13 +1,16 @@
 <div class="navbar-inner">
 	<a class="brand" href="<%= root_path %>" class="home">Home</a>
 	<ul class="nav">
-	<li class="active">
-		<%= link_to 'Add Recipe', new_recipe_path %></li>
-	<li class="active">
-		<%= link_to 'My Recipes', recipes_path(@user) %></li>
+		<li class="active">
+			<%= link_to 'Add Recipe', new_recipe_path %>
+		</li>
+		<% if signed_in? %>
+			<li class="active">
+				<%= link_to 'My Recipes', user_recipes_path(current_user) %>
+			</li>
+		<% end %>
 	</ul>
 	<%= search_form_for search, :class => "nav navbar-search pull-right input-append search-querie"  do |f| %>
 		<%= f.text_field :title_cont, { :id => 'search-field'} %> 
-		<%= f.submit "Search", { :class => "btn btn-success", :id => 'search-button' } %>
 	<% end %>
 </div>
