styled recent recipies on homepage, tests pass

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -92,7 +92,10 @@ div.inner-banner-row {
 		background-color: lightblue;
 		height:200px;
 		width:100%;
-
 	}
+}
+
+div.newest.row {
+	text-align:center;
 
 }
