--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container">
+
 		<div class="navbar navbar-inverse">
 			<%= render 'navbar_form' %>
 		</div>
 
 
 
-<div class="user-nav">
+		<div class="user-nav">
 
 	<%= render 'sign_in_form' %>
 
-</div>
+		</div>
 
 	
 	<p class="notice"><%= notice %></p>
@@ -28,6 +29,7 @@
 
 <%= yield %>
 
-	</div>
+
 </body>
+	</div>
 </html>
