--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,19 +1,29 @@
-<div class="container">
-	<div class="row inner-banner-row">
-		<h1 class="heading">Welcome
-			<p>Top Notch Recipes Secretly Taken From Grandmas Recipe Book</p>
-		</h1>
-		<div class="chicken-image"><%= image_tag("chicken-parmigiana-13.jpg") %></div>
-	</div>
+
+<div class="row inner-banner-row">
+	<h1 class="heading">Welcome
+		<p>Top Notch Recipes Secretly Taken From Grandmas Recipe Book</p>
+	</h1>
+	<div class="chicken-image"><%= image_tag("chicken-parmigiana-13.jpg") %></div>
+</div>
 </div>
 
-<h4 class="newest-recipies">Recently Added</h4>
-<div class="h4-border-div"></div>
-	<div class="newest-recipies row-fluid">
+<h4 class="newest-recipies">Last Three Recipes</h4>
+<div class="h4-border-div">
+</div>
+<div class="newest-row">
 	<% @recipes.each do |recipe| %>
-		<div class="recipe-title span3">
-			<%= recipe.title %> :<br>
-			<%= recipe.description %><br>
+		<div class="recipe-title span6">
+			<h4>
+				<%= recipe.title %> :<br>
+			</h4>
+			<h5>
+				<%= recipe.description %><br>
+			</h5>
+				<% recipe.ingredients.each do |ingredient| %>
+			<h6>
+					<%= ingredient.name %>
+			</h6>
+				<% end %>
 		</div>
 	<% end %>
 </div>
