--- a/app/views/application/_sign_in_form.html.erb
+++ b/app/views/application/_sign_in_form.html.erb
@@ -17,6 +17,14 @@
 	  <%= link_to "Sign up", new_user_registration_path %>
 	<% end %>
 </div>
+
+<div class="sign-in-with-twitter">
+	<%= link_to "Login with Twitter", "/auth/twitter" %>
+</div>
+
+<div class="tweet-this-recipe">
+	<%= link_to "Tweet this recipe!" %>
+</div>
 <script type="text/jscript">
 $(document).ready(function() {
 	var $dialog = $('<div></div>')
