RecipeSeeder class created and unit tested, styling done. Edit recipe page created and acceptance tested.

--- a/app/assets/stylesheets/recipe.css.scss
+++ b/app/assets/stylesheets/recipe.css.scss
@@ -1,4 +1,13 @@
 
+.recipe-search-recipe-title {
+	color:blue;
+}
+
+.search-recipe-description {
+	border-bottom: 1px dotted black;
+
+}
+
 div.recipe-fields {
 	width: 25%;
 	box-shadow: 1px grey;
