--- a/app/views/application/_navbar_form.html.erb
+++ b/app/views/application/_navbar_form.html.erb
@@ -4,6 +4,11 @@
 		<li class="active">
 			<%= link_to 'Add Recipe', new_recipe_path %>
 		</li>
+		<% unless signed_in? %>
+		<li class="active">
+			<%= link_to 'Sign Up', new_user_registration_path %>
+		</li>
+		<% end %>
 		<% if signed_in? %>
 			<li class="active">
 				<%= link_to 'My Recipes', user_recipes_path(current_user) %>
@@ -12,6 +17,6 @@
 	</ul>
 	<%= search_form_for search, :class => "nav navbar-search pull-right input-append search-querie"  do |f| %>
 		<%= f.text_field :title_cont, { :id => 'search-field'} %> 
-		<%= f.submit 'Search', :class => 'btn btn-success' %>
+		<%= f.submit :Search, :class => 'btn btn-success' %>
 	<% end %>
 </div>
