--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,11 @@
 
 <div class="recipe-search-display">
 	<% @recipes.each do |recipe| %>
-		<%= link_to recipe.title, recipe %><br>
+	<div class="search-recipe-title">
+		<%= link_to recipe.title, recipe_path(recipe), :class => 'recipe-search-title' %><br>
+	</div>
+	<div class="search-recipe-description">
+		<%= recipe.description %>
+	</div>
 	<% end %>
 </div>
