--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -3,8 +3,7 @@
 		<%= simple_form_for @recipe do |f| %>
 			<%= f.input :title, label: false, input_html: { placeholder: "Title"} %>
 			<%= f.input :description, label: false, input_html: { placeholder: "Description", :rows => 15 } %><br> 
-				<%= f.association :ingredients, :label => "Ingredients", input_html: { :class => "chzn-select multiple", "data-placeholder" => "Ingredients", :id => 'ingredient-input' } %>
-			<%= f.submit :class => "btn btn-warning" %>
+			<%= f.submit "Create Recipe", :class => "btn btn-warning", id: 'create_recipe' %>
 		<% end %>
 	</div>
 
@@ -18,3 +17,5 @@
 
 
 <%= debug params %> 
+
+
