All recipe link added, sign out button fixed

--- a/app/views/application/_navbar_form.html.erb
+++ b/app/views/application/_navbar_form.html.erb
@@ -13,10 +13,13 @@
 			<li class="active">
 				<%= link_to 'My Recipes', user_recipes_path(current_user) %>
 			</li>
+			<li class="active">
+				<%= link_to 'All Recipes', recipes_path %>
+			</li>
 		<% end %>
 	</ul>
 	<%= search_form_for search, :class => "nav navbar-search pull-right input-append search-querie"  do |f| %>
 		<%= f.text_field :title_cont, { :id => 'search-field'} %> 
-		<%= f.submit :Search, :class => 'btn btn-success' %>
+		<%= f.submit :Search, :class => 'btn btn-danger' %>
 	<% end %>
 </div>
