--- a/app/views/application/_sign_in_form.html.erb
+++ b/app/views/application/_sign_in_form.html.erb
@@ -3,7 +3,7 @@
 	<%= current_user.email %><br>
 	</p>
 	<div class="btn-group">
-	 	<%= link_to "Sign out", destroy_user_session_path, :method => :delete, :class => "btn btn-danger" %>
+	 	<%= link_to "Sign out", destroy_user_session_path, :class => "btn btn-danger" %>
 	 	<%= link_to 'Edit Information', edit_user_registration_path, :method => :get, id: 'edit-information', :class => 'btn btn-danger' %>
 	 </div>
 <% end %>
