--- a/app/assets/stylesheets/recipe.css.scss
+++ b/app/assets/stylesheets/recipe.css.scss
@@ -1,6 +1,8 @@
-
 .recipe-search-recipe-title {
 	color:blue;
+}
+.recipe-description-container {
+	padding-top: 10px;
 }
 
 .search-recipe-description {
