--- a/app/views/application/_navbar_form.html.erb
+++ b/app/views/application/_navbar_form.html.erb
@@ -20,6 +20,6 @@
 	</ul>
 	<%= search_form_for search, :class => "nav navbar-search pull-right input-append search-querie"  do |f| %>
 		<%= f.text_field :title_cont, { :id => 'search-field'} %> 
-		<%= f.submit :Search, :class => 'btn btn-danger' %>
+		<%= f.submit :Search, :class => 'btn btn-warning' %>
 	<% end %>
 </div>
