fixed recent recipes heading

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,7 @@
 	</div>
 </div>
 
-<h4 class="newest-recipies">Recent Recipes</h4>
+<h3 class="newest-recipes">Recent Recipes</h3>
 <div class="h4-border-div"></div>
 
 <div class="row">
