--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -67,11 +67,6 @@ div.row-fluid {
 	}
 }
 
-h1.heading {
-
-
-}
-
 h1 {
 	text-align:center;
 	height:55px;
@@ -87,15 +82,15 @@ div.inner-banner-row {
 	height:450px;
 	width: 100%;
 	padding: 30px;
-
-	div.bottom-row {
-		background-color: lightblue;
-		height:200px;
-		width:100%;
-	}
 }
 
 .recipe-title.span3 {
 	width:300px;
+	text-align:center;
 }
+
+ .newest-recipes {
+ 	text-align:center;
+ }
+
 
