field for yummly search added to application and tested

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
 
 	<%= render 'sign_in_form' %>
 
+	<%= simple_form_for "yummly" do |yum| %>
+		<%= yum.input 'Yummly Search', placeholder: 'Search Yummly' %>
+	<% end %>
+
 		</div>
 
 	
