yummly api model and unit tests completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,7 @@
 
 	<%= render 'sign_in_form' %>
 
-	<%= simple_form_for "yummly" do |yum| %>
-		<%= yum.input 'Yummly Search', placeholder: 'Search Yummly' %>
-	<% end %>
-
+<%= render 'yummly_search_form' %>
 		</div>
 
 	
