--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,13 @@
 
 
 
-		<div class="user-nav">
-
-	<%= render 'sign_in_form' %>
-
-<%= render 'yummly_search_form' %>
+		<div class="user-nav row">
+			<div class="span3">
+				<%= render 'sign_in_form' %>
+			</div>
+			<div class="span3 offset4 form-inline">
+				<%= render 'yummly_search_form' %>
+			</div>
 		</div>
 
 	
