link margin added

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -16,6 +16,10 @@ div.user-nav {
 	padding: 20px;
 }
 
+.recipe-image {
+	margin-bottom: 1em;
+}
+
 div.welcome-sign-in {
 	padding-bottom:10px;
 	text-style:bold;
