--- a/app/views/application/_yummly_search_form.html.erb
+++ b/app/views/application/_yummly_search_form.html.erb
@@ -1,3 +1,4 @@
+Search Yummly.com
 <%= simple_form_for :yummly, method: 'get', controller: 'yummlys', url: yummlys_path do |yum| %>
 	<%= yum.input :yum, placeholder: 'Search Yummly', label: false %>
 	<%= yum.submit "Yummlys", :class => "btn btn-warning" %>
