--- a/app/views/yummlys/index.html.erb
+++ b/app/views/yummlys/index.html.erb
@@ -1,5 +1,5 @@
 <h3>Yummly Search Results</h3>
-	<%= @recipes.each do |recipe| %>
+	<% @recipes.each do |recipe| %>
 <div class='recipe-description-container'>
 		<% image = recipe[:image].first %>
 		<img src="<%= image %>" class="recipe-image" style="height:100px"><br>
