--- a/app/assets/stylesheets/recipe.css.scss
+++ b/app/assets/stylesheets/recipe.css.scss
@@ -10,6 +10,15 @@
 
 }
 
+form.simple_form.yummly {
+	text-align: center;
+}
+
+p {
+	text-align: center;
+	font-size: 1.5em;
+}
+
 div.recipe-fields {
 	width: 25%;
 	box-shadow: 1px grey;
